# internal/interfaces/generated/types.go
@@ -1,6 +1,3 @@
-// Package generated provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
 package generated
 
 import (
@@ -14,24 +11,29 @@ import (
 
 // ProfileInput defines model for ProfileInput.
 type ProfileInput struct {
-	// Affiliation 所属
 	Affiliation *string `json:"affiliation,omitempty"`
+	Bio         *string `json:"bio,omitempty"`
+	InstagramId *string `json:"instagramId,omitempty"`
+	Name        *string `json:"name,omitempty"`
+	TwitterId   *string `json:"twitterId,omitempty"`
+}
 
-	// Bio 一言
-	Bio *string `json:"bio,omitempty"`
-
-	// InstagramId Instagram ID
-	InstagramId *string `json:"instagram_id,omitempty"`
-
-	// Name 氏名
-	Name *string `json:"name,omitempty"`
-
-	// TwitterId Twitter (X) ID
-	TwitterId *string `json:"twitter_id,omitempty"`
+// Profile defines model for Profile.
+type Profile struct {
+	Affiliation *string `json:"affiliation,omitempty"`
+	Bio         *string `json:"bio,omitempty"`
+	CreatedAt   *string `json:"createdAt,omitempty"`
+	Id          *string `json:"id,omitempty"`
+	InstagramId *string `json:"instagramId,omitempty"`
+	Name        *string `json:"name,omitempty"`
+	TwitterId   *string `json:"twitterId,omitempty"`
 }
 
 // CreateProfileJSONRequestBody defines body for CreateProfile for application/json ContentType.
 type CreateProfileJSONRequestBody = ProfileInput
+
+// UpdateProfileJSONRequestBody defines body for UpdateProfile for application/json ContentType.
+type UpdateProfileJSONRequestBody = ProfileInput
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
@@ -44,6 +46,12 @@ type ServerInterface interface {
 	// 指定したIDのプロフィール情報を取得する
 	// (GET /profiles/{id})
 	GetProfileById(ctx echo.Context, id openapi_types.UUID) error
+	// 指定したIDのプロフィール情報を更新する
+	// (PUT /profiles/{id})
+	UpdateProfile(ctx echo.Context, id openapi_types.UUID) error
+	// 指定したIDのプロフィール情報を削除する
+	// (DELETE /profiles/{id})
+	DeleteProfile(ctx echo.Context, id openapi_types.UUID) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -81,8 +89,37 @@ func (w *ServerInterfaceWrapper) GetProfileById(ctx echo.Context) error {
 	}
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.GetProfileById(ctx, id)
-	return err
+	return w.Handler.GetProfileById(ctx, id)
+}
+
+// UpdateProfile converts echo context to params.
+func (w *ServerInterfaceWrapper) UpdateProfile(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	return w.Handler.UpdateProfile(ctx, id)
+}
+
+// DeleteProfile converts echo context to params.
+func (w *ServerInterfaceWrapper) DeleteProfile(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "id", runtime.ParamLocationPath, ctx.Param("id"), &id)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	return w.Handler.DeleteProfile(ctx, id)
 }
 
 // This is a simple interface which specifies echo.Route addition functions which
@@ -116,5 +153,6 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/profiles", wrapper.GetProfiles)
 	router.POST(baseURL+"/profiles", wrapper.CreateProfile)
 	router.GET(baseURL+"/profiles/:id", wrapper.GetProfileById)
-
+	router.PUT(baseURL+"/profiles/:id", wrapper.UpdateProfile)
+	router.DELETE(baseURL+"/profiles/:id", wrapper.DeleteProfile)
 }
